--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=8900
 
 #PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://postgres.default:5432/VKR
+spring.datasource.url=jdbc:postgresql://localhost:5432/VKR
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
 #Redis
