--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@ server.port=8900
 
 #PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://postgres.default:5432/marketplace
+spring.datasource.url=jdbc:postgresql://postgres.postgres:5432/marketplace
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
 #Redis
 spring.data.redis.database=0
-spring.data.redis.host=redis.default
+spring.data.redis.host=redis.redis
 spring.data.redis.port=6379
 spring.data.redis.username=default
 spring.data.redis.password=12345
