--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.data.redis.username=default
 spring.data.redis.password=12345
 spring.data.redis.timeout=60000
 spring.data.redis.repositories.enabled=false
+#Jaeger
+management.otlp.metrics.export.url=http://jaeger.jaeger:14268
