--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: java
 jdk:
   - openjdk17
-sudo: true
-script: ./gradlew build --refresh-dependencies
+
+addons:
+  sonarcloud:
+    organization: "02ten" # the key of the org you chose at step #3
+    token: $Sonar # encrypted value of your token
+script:
+  - ./gradlew build sonarqube -Dsonar.projectKey=marketplace-auth-service -Dsonar.organization=02ten -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$Sonar
